--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-            <img src="/img/logo.png" alt="logo" width="100px">
+            <img src="img/logo.png" alt="logo" width="100px">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,16 +21,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="/html/about.html">Acerca de mi</a>
+                <a class="nav-link" href="html/about.html">Acerca de mi</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/html/skills.html">Habilidades</a>
+                <a class="nav-link" href="html/skills.html">Habilidades</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/html/portafolio.html">Portafolio</a>
+                <a class="nav-link" href="html/portafolio.html">Portafolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/html/contact.html">Contáctame</a>
+                <a class="nav-link" href="html/contact.html">Contáctame</a>
               </li>
             </ul>
           </div>
