--- a/html/contact.html
+++ b/html/contact.html
@@ -6,7 +6,7 @@
     <title>Contáctame</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
-    <script src="script/asd.js"></script>
+    <script src="..script/asd.js"></script>
 </head>
 <body>
     <header>
