--- a/html/skills.html
+++ b/html/skills.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="about.html">
-            <img src="img/logo.png" alt="logo" width="100px">
+            <img src="../img/logo.png" alt="logo" width="100px">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,23 +42,23 @@
         <h1>Habilidades</h1>
       <div class="leng">
         <div class="item">
-          <img src="img/html.png" alt="html">
+          <img src="../img/html.png" alt="html">
           <h3>HTML</h3>
         </div>
         <div class="item">
-          <img src="img/css.png" alt="css">
+          <img src="../img/css.png" alt="css">
           <h3>CSS</h3>
         </div>
         <div class="item">
-          <img src="img/js.png" alt="js">
+          <img src="../img/js.png" alt="js">
           <h3>JS</h3>
         </div>
         <div class="item">
-          <img src="img/c++.png" alt="c++">
+          <img src="../img/c++.png" alt="c++">
           <h3>C++</h3>
         </div>
         <div class="item">  
-          <img src="img/python.png" alt="python">
+          <img src="../img/python.png" alt="python">
           <h3>Python</h3>
         </div>
       </div>
